# 8-Queens-Track

./: Board.cpp  Board.h  CMakeLists.txt  Definer.h  NQueenBacktrack.cpp  NQueenBacktrack.h  boxes.cpp  boxes.h  main.cpp
